Redirect menu to avoid overlap

--- a/src/global-style.css
+++ b/src/global-style.css
@@ -52,14 +52,13 @@ body {
   outline: 0;
 
   margin: 0;
-  margin-bottom: 14px;
 
   cursor: pointer;
 
   z-index: 1;
 
   opacity: 1;
-  transition: opacity 0.2s, transform 0.1s;
+  transition: opacity 0.2s, transform 0.1s, left 0.2s;
 }
 
 @media(hover: hover) and (pointer: fine) {
